[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/StinkySockReimagined/SnakePart.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/StinkySockReimagined/sock.png" type="Texture" id=3]
[ext_resource path="res://components/Arrow/Arrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/StinkySock/sock.png" type="Texture" id=5]
[ext_resource path="res://Enemies/StinkySockReimagined/Sock.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 36.9689

[sub_resource type="Animation" id=2]
resource_name = "StinkCloud"
length = 4.0
tracks/0/type = "method"
tracks/0/path = NodePath("FSM")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_spawn_cloud"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Head:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 3.00305, 4 ),
"transitions": PoolRealArray( 0.5, 0.225313, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 0.205772, 0.205772 ), Vector2( 0.266447, 0.266447 ), Vector2( 0.107363, 0.107363 ), Vector2( 0.205772, 0.205772 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3, 3, 4 ),
"transitions": PoolRealArray( 0.435275, 0.366022, -2, 0.435275 ),
"update": 0,
"values": [ 0.0, -15.7699, -2.2637, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ 0.0, 30.2267 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 40.3073

[sub_resource type="Animation" id=5]
resource_name = "Tongue"
length = 10.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Tongue:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.95, 1.1, 10 ),
"transitions": PoolRealArray( 0.5, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -103.768, 107.657 ), Vector2( -116.841, 123.748 ), Vector2( -116.841, 123.748 ), Vector2( -105.198, 126.907 ), Vector2( -125.311, 123.89 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Tongue:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0.297302, 0.297302, 0.297302, 0.297302, 0.297302, 0.297302, 0.297302, 0.297302, 0.297302 ),
"update": 0,
"values": [ 0.191252, -22.6904, 0.191252, -22.6904, 0.191252, -22.6904, 0.191252, -22.6904, 0.191252, -22.6904, 0.191252, -22.6904, 0.191252, -22.6904, 0.191252, -22.6904, -22.6904, 14.3015, -59.0927, 14.3015, -59.0927, 14.3015, -59.0927, 14.3015, -59.0927, 14.3015 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tongue:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.95, 1.1, 2.49147, 10 ),
"transitions": PoolRealArray( 0.5, 1, 0.5, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.595286, 0.712438 ), Vector2( 1.72176, 1.01279 ), Vector2( 1.57671, 1.15824 ), Vector2( 1.11954, 0.928944 ), Vector2( 0.979993, 0.785541 ), Vector2( 0.979993, 0.785541 ) ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 56.0404

[node name="Sock" instance=ExtResource( 1 )]
touch_damage = 8

[node name="Movement" parent="." index="0"]
walk_speed = 300
max_speed = Vector2( 200, 700 )
friction = 200

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0.496403, -4.80955 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
anims/StinkCloud = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="Health" parent="." index="4"]
maxHealth = 50

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.48378, -4.8381 )
shape = SubResource( 4 )

[node name="Head" type="Sprite" parent="Sprites" index="0"]
position = Vector2( -2.92128, -5.98255 )
scale = Vector2( 0.205772, 0.205772 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 20.5, 35.5, 494, 412 )

[node name="TonguePlayer" type="AnimationPlayer" parent="Sprites/Head" index="0"]
autoplay = "Tongue"
anims/Tongue = SubResource( 5 )

[node name="Tongue" type="Sprite" parent="Sprites/Head" index="1"]
show_behind_parent = true
position = Vector2( -125.311, 123.89 )
rotation = 0.249608
scale = Vector2( 0.979993, 0.785541 )
texture = ExtResource( 5 )
offset = Vector2( -38.0162, 22.1262 )
region_enabled = true
region_rect = Rect2( 24.5, 908.5, 124, 102 )

[node name="FSM" parent="." index="7"]
script = ExtResource( 6 )
snake_part = ExtResource( 2 )
snake_tex = ExtResource( 3 )

[node name="Label" parent="FSM" index="0"]
margin_left = -23.3333
margin_top = -36.2095
margin_right = 140.667
margin_bottom = 20.7905
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 1, 0 )

[node name="Timer" type="Timer" parent="FSM" index="1"]
one_shot = true

[node name="Arrow" parent="FSM" index="2" instance=ExtResource( 4 )]

[node name="PlayerDetection" type="Area2D" parent="." index="8"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection" index="0"]
visible = false
shape = SubResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer" to="FSM" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="FSM/Timer" to="FSM" method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="FSM" method="_on_PlayerDetection_body_entered"]
